--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port = 8081
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=virat.heart.18@gmail.com
-spring.mail.password= pnkqoigxemcvftml
+spring.mail.username=// @gmail.com
+spring.mail.password= //password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
